sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: class Array takes type parameters
def bubbleSort(L:Array)  {
                 ^AlgBubbleSort1:2: error: class Array takes type parameters
def bubbleSort(L:Array)  {
                 ^